[gd_scene load_steps=11 format=3 uid="uid://c21tsme1w6uqc"]

[ext_resource type="PackedScene" uid="uid://dtpkylmn14mi6" path="res://UI/Elements/MenuButton/MenuButton.tscn" id="1_185um"]
[ext_resource type="Script" path="res://UI/Menus/MemoriesMenu/MemoriesMenu.gd" id="1_hytkw"]
[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="4_gssis"]

[sub_resource type="FontVariation" id="FontVariation_4axqc"]
base_font = ExtResource("4_gssis")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk3cc"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt0ty"]
bg_color = Color(0.701961, 0.482353, 0.909804, 1)

[sub_resource type="Animation" id="Animation_7ar6e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sections:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Background:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tkxve"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sections:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2bt5k"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sections:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h03no"]
_data = {
"RESET": SubResource("Animation_7ar6e"),
"fade_in": SubResource("Animation_tkxve"),
"fade_out": SubResource("Animation_2bt5k")
}

[node name="MemoriesMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_hytkw")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.309804)

[node name="Sections" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="TopArea" type="MarginContainer" parent="Sections"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 60

[node name="UISections" type="HBoxContainer" parent="Sections/TopArea"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LeftButtons" type="HBoxContainer" parent="Sections/TopArea/UISections"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BackButton" parent="Sections/TopArea/UISections/LeftButtons" instance=ExtResource("1_185um")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "BACK"

[node name="SectionButtons" type="HBoxContainer" parent="Sections/TopArea/UISections"]
layout_mode = 2
theme_override_constants/separation = 120
alignment = 1

[node name="AccountButton" parent="Sections/TopArea/UISections/SectionButtons" instance=ExtResource("1_185um")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "ACCOUNT"

[node name="ItemsButton" parent="Sections/TopArea/UISections/SectionButtons" instance=ExtResource("1_185um")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "ITEMS"

[node name="CharactersButton" parent="Sections/TopArea/UISections/SectionButtons" instance=ExtResource("1_185um")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "CHARACTERS"

[node name="EnemiesButton" parent="Sections/TopArea/UISections/SectionButtons" instance=ExtResource("1_185um")]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "ENEMIES"

[node name="RightButtons" type="HBoxContainer" parent="Sections/TopArea/UISections"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="Control" parent="Sections"]
layout_mode = 2
size_flags_vertical = 3

[node name="Account" type="VBoxContainer" parent="Sections/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Spacer" type="Control" parent="Sections/Content/Account"]
layout_mode = 2

[node name="AccountSummary" type="VBoxContainer" parent="Sections/Content/Account"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24
alignment = 1

[node name="AccountLevel" type="HBoxContainer" parent="Sections/Content/Account/AccountSummary"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="Sections/Content/Account/AccountSummary/AccountLevel"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 30
text = "Account Level:"
horizontal_alignment = 1

[node name="AmountLabel" type="Label" parent="Sections/Content/Account/AccountSummary/AccountLevel"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 30
text = "0"

[node name="ProgressBar" type="ProgressBar" parent="Sections/Content/Account/AccountSummary"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxFlat_sk3cc")
theme_override_styles/fill = SubResource("StyleBoxFlat_rt0ty")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Sections/Content/Account/AccountSummary/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 22
text = "300XP / 300XP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsSummary" type="VBoxContainer" parent="Sections/Content/Account"]
layout_mode = 2

[node name="Title" type="Label" parent="Sections/Content/Account/StatsSummary"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 60
text = "STATS"
horizontal_alignment = 1

[node name="Columns" type="HBoxContainer" parent="Sections/Content/Account/StatsSummary"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="LeftColumn" type="VBoxContainer" parent="Sections/Content/Account/StatsSummary/Columns"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/Content/Account/StatsSummary/Columns/LeftColumn"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Enemies killed: -1"

[node name="Label2" type="Label" parent="Sections/Content/Account/StatsSummary/Columns/LeftColumn"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Moves: 1"

[node name="RightColumn" type="VBoxContainer" parent="Sections/Content/Account/StatsSummary/Columns"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/Content/Account/StatsSummary/Columns/RightColumn"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Runs started: -1"

[node name="Label2" type="Label" parent="Sections/Content/Account/StatsSummary/Columns/RightColumn"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 24
text = "Run victories: -1"

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h03no")
}

[connection signal="pressed" from="Sections/TopArea/UISections/LeftButtons/BackButton" to="." method="_on_back_button_pressed"]
